# sangTran_github

./: .env.sample  .gitignore  README.md  app.py  article_hashes.json  docker-compose.yaml  dockerfile  main.py  pyproject.toml  requirements.txt  scrape.py  scrape_state.json  test_assistant.py  upload_vectorstore.py  uploaded_files.json
.github/workflows/: daily-scrape.yaml  daily-scraper.yml
static/: script.js  style.css
templates/: index.html
