[project]
name = "my-test-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "google-genai>=2.10.0",
    "markdownify>=1.2.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "requests>=2.34.2",
]
